<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <Button
        android:id="@+id/btnLoginInstead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/btn_pale"
        android:text="@string/login_instead"
        android:textColor="@color/btn_pale_text"
        app:cornerRadius="@dimen/btn_small_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/first_name_sample"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/welcome_text"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:text="@string/registration_welcome"
        android:textColor="@color/welcome_desciption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/first_name_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/last_name_sample"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/email_sample"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password_sample"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password_sample"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/last_name_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/email_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/password_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/confirm_password_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>