<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginEnd="@dimen/app_border"
        android:ems="10"
        android:hint="@string/email_sample"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password_sample"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnRegisterInstead"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/btn_pale"
        android:text="@string/register_instead"
        android:textColor="@color/btn_pale_text"
        app:cornerRadius="@dimen/btn_small_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:text="@string/login_welcome"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/textViewContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:layout_marginBottom="16dp"
        android:text="@string/login_prompt"
        android:textColor="@color/welcome_desciption"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/email_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_border"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/app_border"
        android:text="@string/password_label"
        android:textColor="@color/btn_black_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>